--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+.logo_box {
+  width: 175px;
+  height: 39px;
+}
+
+.icon_box {
+  width: 20px;
+  height: 20px;
+}
+
+.icon,
+.logo {
+  width: 100%;
+  height: 100%;
+  background-position: 50%;
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.logo_icon {
+  background-image: url(assets/image/logo.svg);
+}
+
+.signout_icon {
+  background-image: url(assets/image/sign-out.png);
+}
