change assets url

--- a/src/App.css
+++ b/src/App.css
@@ -61,5 +61,5 @@
 }
 
 .signout_icon {
-  background-image: url(assets/image/sign-out.png);
+  background-image: url(assets/image/logout_black_icon.svg);
 }
